# rust-backend-tutorial

./: Cargo.toml  README.md  Rocket.toml
migrations/2019-11-12-052400_initialize/: down.sql  up.sql
migrations/2019-11-12-060200_remove_device_type/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
